Aegisub changelog
Please visit http://aegisub.net to download latest version

= 2.00 - 2007.xx.xx ===========================

- New Aegisub logo. (AMZ)
- Automation 4 has replaced Automation 3, see the help file for more details (jfs)
  o Automation 4 Lua uses Lua 5.1 instead of 5.0, meaning some new language features
  o It is now possible to write macros that manipulate subtitles directly
  o Scripts have full access to the entire subtitle file, not just the "Events" section
- Visual Typesetting functionality implemented, which should make typesetting much easier and faster. (AMZ)
- Support reading SSA/ASS files with intermixed V4 and V4+ Styles sections. (jfs)
- Fixed loading of sections with unexpected cases. (AMZ)
- Changes to Audio Spectrum: (jfs)
  o The calculated FFT data are now cached, so things should be faster
  o Actual signal power is now more accurately represented
  o The palette is changed
  o The selection is no longer shown by ugly reverse colour but with a different palette instead
  o Use vertical zoom slider to amplify/dampen displayed signal strength (useful for better visualisation of quiet sections, or easier picking out the dominating frequencies in noisy sections)
- Plain-text export (jfs)
- The style of the current line is automatically selected when opening the Style Manager (jfs)
- Added long-missing Edit buttons in Style Manager (jfs)
- Various fixes to better handle paths/file names with non-ANSI characters on Windows (jfs/AMZ)
- Video display fixed on Linux and maybe also Mac (Azzy)
- Misc. fixes for building on Linux (Azzy)
- libass support for subtitles on UNIX (Azzy)
- Redesigned the FexTracker configuration window (jfs)
- Framegrabs from the video now also includes framenumber in the filename (jfs)
- Scrollbar in main subs grid didn't always allow scrolling through all the subs (jfs)